Fix T52368: OSL trace() crash after recent changes.